# digit

./: digit.cabal  stack.yaml
spec/: DigitSpec.hs
src/Data/: Digit.hs
