cabal-version:       2.4
name:                digit
version:             0.1.0.0
synopsis: Decimal digit
license-file:        LICENSE
build-type:          Simple

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Data.Digit
  build-depends:       base
                     , QuickCheck
                     , lens
                     , regex-applicative
                     , text
  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                     , LambdaCase

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      spec
  main-is:             Spec.hs
  default-language:    Haskell2010
  build-depends:       base
                     , QuickCheck
                     , quickcheck-instances
                     , digit
                     , lens
                     , hspec
  build-tool-depends:  hspec-discover:hspec-discover
  other-modules:       DigitSpec
  default-extensions:  RankNTypes
                     , TypeApplications
